syntax = "proto3";

option csharp_namespace = "Proto.IdentityV1";

package identity.v1;

enum Role{
  CUSTOMER_UNSPECIFIED = 0;
  ADMIN = 1;
  SUPPORT = 2;
  MAINTENANCE = 3;
  HR = 4;
}

enum Status{
  APPROVED_UNSPECIFIED = 0;
  PENDING_CONFIRMATION = 1;
  PENDING_APPROVAL = 2;
  DEACTIVATED = 3;
}

service Identity {
  rpc CreateAccount (CreateRequest) returns (CreateResponse);
  rpc Authorize (AuthorizeRequest) returns (AuthorizeResponse);
  rpc Authenticate (AuthenticateRequest) returns (AuthenticateResponse);
  rpc ConfirmEmail (ConfirmEmailRequest) returns (ConfirmEmailResponse);
  rpc RefreshAccessToken (RefreshAccessTokenRequest) returns (RefreshAccessTokenResponse);
  rpc RecoverPassword (RecoverPasswordRequest) returns (RecoverPasswordResponse);
  rpc UpdatePassword (UpdatePasswordRequest) returns (UpdatePasswordResponse);
}


// Authorize account
message AuthorizeRequest {
  string cor_id = 1;
  string tkn = 2;
}
message AuthorizeResponse {
  string acc_id = 2;
  Role role = 3;
  Status status = 4;
}


// Authenticate account
message AuthenticateRequest{
  string cor_id = 1;
  string email = 2;
  string pass = 3;
}
message AuthenticateResponse{
  string tkn = 1;
  string refresh_tkn = 2;
}


// Create account
message CreateRequest{
  string cor_id = 1;
  Role role = 2;
  string email = 3;
  string phone = 4;
  string pass = 5;
}
message CreateResponse{
  string acc_id = 1;
}


// Confirm email
message ConfirmEmailRequest{
  string cor_id = 1;
  string acc_id = 2;
  string confirmation_tkn = 3;
}
message ConfirmEmailResponse{
} 


// Refresh access token
message RefreshAccessTokenRequest{
  string cor_id = 1;
  string refresh_tkn = 2;
}
message RefreshAccessTokenResponse{
  string tkn = 1;
  string refresh_tkn = 2;
}


// Recover password
message RecoverPasswordRequest{
  string cor_id = 1;
  string email = 2;
}
message RecoverPasswordResponse{}


// Update Password
message UpdatePasswordRequest{
  string cor_id = 1;
  string new_pass = 2;
  string email = 3;
  string reset_tkn = 4;
}
message UpdatePasswordResponse{}


